--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <p>Friends making games</p>
     <h2>Our games</h2>
     <ul>
-      <li><a href="https://sharemygame.com/@mikelitton/~9f7f2130-1e20-08c1-b8d2-0f1640044e28">Monster Tomatoes</a></li>
+      <li>Mike
+        <ul>
+          <li><a href="https://mikelitton.itch.io/g1-monster-tomatoes">Monster Tomatoes</a></li>
+        </ul>
+      </li>
+      <li>Pontus
+        <ul>
+          <li><a href="https://i.simmer.io/@Molntuss/blockbreakerpro">Blockbreaker Pro</a></li>
+        </ul>
+      </li>
     </ul>
-    <iframe src="https://i.simmer.io/@Molntuss/blockbreakerpro" style="width:960px;height:600px"></iframe>
   </body>
 </html>
