--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <ul>
       <li>Mike
         <ul>
+          <li><a href="https://mikelitton.itch.io/g2-hellblox">HellBlox</a></li>
           <li><a href="https://mikelitton.itch.io/g1-monster-tomatoes">Monster Tomatoes</a></li>
         </ul>
       </li>
